# Audio-paste

./: .gitignore  README.md  audio-paste.spec  index.html  main.py  myapp.spec  package-lock.json  package.json  pyproject.toml
.agent/rules/: AGENTS.md
src/: main.py  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: env.rs  mod.rs  whisper_config.rs
src-tauri/src/constants/: config.rs
src-tauri/src/controllers/: commands.rs
src-tauri/src/services/: audio_service.rs  clipboard_service.rs  hotkey_service.rs  mod.rs  transcription_service.rs
src/audio_paste/: main.py
src/config/: ui_config.ts
src/constants/: config.py  ui.ts
src/controllers/: AppController.ts
src/services/: api.ts  audio_service.py  config_manager.py  transcription_service.py
src/styles/: main.css
src/views/: MainView.ts  __init__.py  main_window.py  signals.py  styles.py
