[project]
name = "audio-paste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ 
    "faster-whisper>=1.2.1",
    "numpy>=2.4.0",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "pyqt6>=6.10.1",
    "python-xlib>=0.33",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
audio-paste = "main:main"

