[package]
name = "audio_paste"
version = "0.1.0"
description = "Audio Paste Application"
authors = ["prasanna"]
edition = "2021"

[lib]
name = "audio_paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Added dependencies for audio and keyboard simulating
cpal = "0.15"
hound = "3.5"
enigo = "0.2"
tauri-plugin-global-shortcut = "2"
dirs = "5.0"
lazy_static = "1.4"
arboard = "3.4"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

